--- a/exercises/01_html/ex5/index.html
+++ b/exercises/01_html/ex5/index.html
@@ -5,8 +5,9 @@
     <title>1.5 HTML Text Formatting</title>
   </head>
   <body>
-    HTML - Hypertext Markup Language - is the standard markup language for creating web pages. 
-    It describes the structure of a web page semantically along with cues for presentation, 
-    making it an essential part of web development.
+    <strong>HTML</strong> - <em>Hypertext Markup Language</em> - is the 
+    <span style="background-color: yellow;">standard markup language</span> for creating 
+    <u>web pages</u>. It describes the structure of a web page semantically along with cues 
+    for presentation, making it an <small>essential</small> part of web development.
   </body>
 </html>
