Added missing mark tag

--- a/exercises/01_html/ex5/index.html
+++ b/exercises/01_html/ex5/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <strong>HTML</strong> - <em>Hypertext Markup Language</em> - is the 
-    <span style="background-color: yellow;">standard markup language</span> for creating 
+    <mark>standard markup language</mark> for creating 
     <u>web pages</u>. It describes the structure of a web page semantically along with cues 
     for presentation, making it an <small>essential</small> part of web development.
   </body>
