--- a/exercises/01_html/ex8/index.html
+++ b/exercises/01_html/ex8/index.html
@@ -4,11 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Student Scores</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>Student Scores</h1>
     <table>
         <!-- Write code for the table here -->
+        <thead>
+            <tr>
+                <th>Name</th>
+                <th>Score</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td rowspan="2">John Doe</td>
+                <td>85</td>
+            </tr>
+            <tr>
+                <td>90</td>
+            </tr>
+            <tr>
+                <td>Sam Brown</td>
+                <td>78</td>
+            </tr>
+            <tr>
+                <td>Lisa White</td>
+                <td>92</td>
+            </tr>
+            <tr>
+                <td colspan="2">Total students: 3</td>
+            </tr>
+        </tbody>    
     </table>
 </body>
 </html>
